--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
   "author": "higaguin",
   "license": "ISC",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.7.3",
-    "nodemon": "^1.19.3",
-    "request": "^2.88.0"
+    "nodemon": "^1.19.3"
   },
   "devDependencies": {
     "mongo-seeding": "^3.3.0",
